python 脚本拆分